@@ -1,4 +1,4 @@
-UPnP version 1.0
+UPnP version 1.3
 =================
 
 The README is used to introduce the module and provide instructions on
@@ -23,7 +23,7 @@ To install this module type the following:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2005 Satoshi Konno
+Copyright (C) 2005-2008 Satoshi Konno
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without 
